# rust-todo-cli

./: .gitignore  Cargo.toml  clippy.sh  readme.md  testcase.json
src/: lib.rs  main.rs
src/crud/: adding.rs  deleting.rs  filter.rs  mod.rs  updating.rs
src/errors/: mod.rs  rtc_error.rs
src/util/: config.rs  mod.rs  todo_item.rs
src/util/db/: database_wrapper.rs  mod.rs  pickle_db_impl.rs
tests/: common.rs  integration_test.rs
