[package]
name = "rust-todo-cli"
version = "0.1.0"
authors = ["Lorenz Leitner <lorenz.leitner@student.tugraz.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
pickledb = "0.4.1"
serde = "1.0.125"
chrono = { version = "0.4.19", features = ["serde"] }
colored = "2.0.0"
dirs = "3.0.2"